<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/White"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignInActivity">



    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/register_bottom_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textSize="16sp"
            android:text="@string/register_bottom_text"
            android:textColor="@color/Hint"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/register_bottom_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:clickable="true"
            android:textSize="16sp"
            android:text="@string/register_bottom_click"
            android:textColor="@color/Text"
            app:layout_constraintEnd_toEndOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/register_top_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/register_top_text"
            android:textColor="@color/Text"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/signin_top_hi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/signin_top_hi"
            android:textColor="@color/SubTextDark"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/register_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/register_name"
                android:textColor="@color/Text"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_name_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/background_radius15"
                android:hint="@string/register_hint_name"
                android:paddingStart="14dp"
                android:textSize="14dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/signin_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/signin_email"
                android:textColor="@color/Text"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_email_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/background_radius15"
                android:hint="@string/signin_email_hint"
                android:paddingStart="14dp"
                android:textSize="14dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/signin_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/signin_password"
                android:textColor="@color/Text"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_password_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/background_radius15"
                android:hint="@string/signin_password_hint"
                android:paddingStart="14dp"
                android:textSize="14dp" />

        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/black_radius14"
            android:text="@string/register_auth"
            android:textAllCaps="false"
            android:textColor="@color/White" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>