<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/White"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignInActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/signin_bottom_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textSize="16sp"
            android:text="@string/signin_bottom_text"
            android:textColor="@color/Hint"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/signin_bottom_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textSize="16sp"
            android:clickable="true"
            android:text="@string/signin_bottom_click"
            android:textColor="@color/Text"
            app:layout_constraintEnd_toEndOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="60dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/signin_top_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textSize="32sp"
            android:text="@string/signin_top_text"
            android:textColor="@color/Text"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/signin_top_hi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/signin_top_hi"
            android:textColor="@color/SubTextDark"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/signin_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:textSize="16sp"
                android:gravity="center"
                android:text="@string/signin_email"
                android:textColor="@color/Text"
                app:layout_constraintStart_toStartOf="parent" />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signin_email_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/background_radius15"
                android:hint="@string/signin_email_hint"
                android:textSize="14dp"
                android:paddingStart="14dp"
                android:layout_marginTop="12dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/signin_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:textSize="16sp"
                android:gravity="center"
                android:text="@string/signin_password"
                android:textColor="@color/Text"
                app:layout_constraintStart_toStartOf="parent" />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signin_password_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/background_radius15"
                android:hint="@string/signin_password_hint"
                android:textSize="14dp"
                android:paddingStart="14dp"
                android:layout_marginTop="12dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/signin_fix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="@font/roboto"
            android:textSize="12sp"
            android:gravity="center"
            android:paddingVertical="6dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="18dp"
            android:text="@string/signin_fix"
            android:textColor="@color/SubTextDark"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAllCaps="false"
            android:text="@string/signin_auth"
            android:textColor="@color/White"
            android:background="@drawable/black_radius14"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>